Add more tests, align getPackage